Added spatial structures in rcache, LZ4, polyfit, many fixes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,13 +12,15 @@ CFLAGS  += -I/usr/include/SDL2 -D_REENTRANT
 
 LFLAGS	= -lm -lSDL2 -lSDL2_ttf -lSDL2_image
 
-OBJS	= async.o \
+OBJS	= lz4/lz4.o \
+	  async.o \
 	  blob_ttf.o \
 	  dirent.o \
 	  draw.o \
 	  edit.o \
 	  gp.o \
 	  lang.o \
+	  lse.o \
 	  menu.o \
 	  plot.o \
 	  read.o \
