Added a new version of LSE, also some fixes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,7 +7,7 @@ LD	= gcc
 MK	= mkdir -p
 RM      = rm -rf
 
-CFLAGS  = -std=gnu99 -pipe -Wall -O3 -flto -g3
+CFLAGS  = -std=gnu99 -pipe -Wall -O3 -flto=auto -g3
 CFLAGS  += -fno-stack-protector
 CFLAGS  += -I/usr/include/SDL2 -D_REENTRANT
 
