--- a/src/Makefile.mingw
+++ b/src/Makefile.mingw
@@ -12,10 +12,19 @@ STRIP	= $(CROSS)-strip -s
 MK	= mkdir -p
 RM      = rm -rf
 
-CFLAGS  = -std=gnu99 -pipe -Wall -O3 -flto=auto -g1
+CFLAGS  = -std=gnu99 -Wall -O3 -flto=auto -g3 -pipe
+
+CFLAGS  += -fno-math-errno \
+	   -ffinite-math-only \
+	   -fno-signed-zeros \
+	   -fno-trapping-math \
+	   -fno-associative-math \
+	   -fno-reciprocal-math \
+	   -ffp-contract=fast
+
 CFLAGS  += -fno-stack-protector
 CFLAGS  += -I$(SDLDIR)/include -I$(SDLDIR)/include/SDL2
-CFLAGS  += -D_WINDOWS
+CFLAGS  += -D_WINDOWS -D_LEGACY
 
 LFLAGS	= -lm -lSDL2 -lSDL2_ttf -lSDL2_image -static
 LFLAGS	+= -L$(SDLDIR)/lib
