--- a/src/Makefile.mingw
+++ b/src/Makefile.mingw
@@ -14,8 +14,8 @@ RM      = rm -rf
 
 CFLAGS  = -std=gnu99 -Wall -O3 -flto=auto -g3 -pipe
 
-CFLAGS  += -fno-math-errno \
-	   -ffinite-math-only \
+CFLAGS  += -ffinite-math-only \
+	   -fno-math-errno \
 	   -fno-signed-zeros \
 	   -fno-trapping-math \
 	   -fno-associative-math \
